Another attempt to fix overflow scrolling on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -3,14 +3,14 @@
 @tailwind utilities;
 
 html {
-  width: 100%;
-  height: 100%;
+  /* width: 100%; */
+  /* height: 100%; */
   height: -webkit-fill-available;
 }
 
 body {
-  width: 100%;
-  height: 100%;
+  /* width: 100%; */
+  /* height: 100%; */
   height: -webkit-fill-available;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
